--- a/styles/@syntax-highlighting/mod.css
+++ b/styles/@syntax-highlighting/mod.css
@@ -21,7 +21,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  :root:not([data-color-scheme="light"]), :host:not([data-color-scheme="light"]) {
+  :root:not([data-color-scheme="light"]), :host(:not([data-color-scheme="light"])) {
     --comment: #8b949e;
     --function: #d2a8ff;
     --language: #79c0ff;
